[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pipenv]
allow_prereleases = true

[tool.poetry]
name = "teakiandra"
version = "0.1.0"
description = "A Python project for tea enthusiasts"
authors = ["KurniawanZATY"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
